--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
   </head>
   <body ng-app="HelloApp">
     <div class=nav>
-        <button name="button1">Fee</button>
-        <button name="button2">Fi</button>
-        <button name="button3">Fo</button>
-        <button name="button4">Fum</button>
+        <button name="button-login">ABOUT</button>
+        <button name="button-login">CONTACT</button>
+        <button name="button-login">LOGIN</button>
+        <button name="button-login">SIGN UP</button>
     </div> 
     <div ng-controller="HelloController as helloCtrl">
       <p>Howdy</p>
